[metadata]
name = zyppnotify
version = 0.2.1
author = Erfan Nariman, Melvin Folkers
author_email = hello@zypp.io
description = Send users notifications through various platforms
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, notifications, teams, e-mail
url = https://github.com/zypp-io/zyppnotify
project_urls =
    Bug Tracker = https://github.com/zypp-io/zyppnotify/issues
    Source = https://github.com/zypp-io/zyppnotify
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = notify
python_requires = >=3.6
install_requires =
    Babel
    pymsteams
    pandas
    tabulate

[flake8]
statistics = True
count = True
max-complexity=10
max-line-length=120
per-file-ignores=
    __init__.py: F401

[isort]
line_length = 120
