[metadata]
name = zyppnotify
version = 0.6.0
author = Zypp
author_email = hello@zypp.io
description = Send users notifications through various platforms
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, notifications, teams, e-mail
url = https://github.com/zypp-io/zyppnotify
project_urls =
    Bug Tracker = https://github.com/zypp-io/zyppnotify/issues
    Source = https://github.com/zypp-io/zyppnotify
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = notify
python_requires = >=3.9
install_requires =
    azure-identity>=1.16.1
    Babel>=2.14.0
    msgraph-core>=1.1.3
    pandas>=2.2.2
    tabulate>=0.8.10
    msgraph-sdk~=1.5.4
